--- a/2342-const-control-flow.html
+++ b/2342-const-control-flow.html
@@ -160,20 +160,34 @@
                 <div id="content" class="content">
                     <main>
                         <ul>
-<li>Feature Name: <code>const-control-flow</code></li>
-<li>Start Date: 2018-01-11</li>
-<li>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/2342">rust-lang/rfcs#2342</a></li>
-<li>Rust Issue: <a href="https://github.com/rust-lang/rust/issues/49146">rust-lang/rust#49146</a></li>
+<li>
+<p>Feature Name: <code>const-control-flow</code></p>
+</li>
+<li>
+<p>Start Date: 2018-01-11</p>
+</li>
+<li>
+<p>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/2342">rust-lang/rfcs#2342</a></p>
+</li>
+<li>
+<p>Rust Issue: <a href="https://github.com/rust-lang/rust/issues/49146">rust-lang/rust#49146</a></p>
+</li>
+<li>
+<p>translators: [CYBAI <a href="mailto:cyb.ai.815@gmail.com">cyb.ai.815@gmail.com</a>]</p>
+</li>
+<li>
+<p>commit: <a href="https://github.com/rust-lang/rfcs/blob/dfe697106478a52bddc000477e8cd0621bcc1a20/text/2342-const-control-flow.md">The commit link this page based on</a></p>
+</li>
+<li>
+<p>updated: 2020-09-05</p>
+</li>
 </ul>
-<h1><a class="header" href="#summary" id="summary">Summary</a></h1>
-<p>Enable <code>if</code> and <code>match</code> during const evaluation and make them evaluate lazily.
-In short, this will allow <code>if x &lt; y { y - x } else { x - y }</code> even though the
-else branch would emit an overflow error for unsigned types if <code>x &lt; y</code>.</p>
-<h1><a class="header" href="#motivation" id="motivation">Motivation</a></h1>
-<p>Conditions in constants are important for making functions like <code>NonZero::new</code>
-const fn and interpreting assertions.</p>
-<h1><a class="header" href="#guide-level-explanation" id="guide-level-explanation">Guide-level explanation</a></h1>
-<p>If you write</p>
+<h1><a class="header" href="#總結" id="總結">總結</a></h1>
+<p>透過此功能，可以在常數求值（const evaluation）中使用 <code>if</code> 及 <code>match</code> 並使他們被延遲求值。簡單來說，這項功能允許我們寫 <code>if x &lt; y { y - x } else { x - y }</code>；即使當使用非負型別時在 <code>x &lt; y</code> 的 <code>else</code> 分支會報溢位錯誤 (overflow error)。</p>
+<h1><a class="header" href="#動機" id="動機">動機</a></h1>
+<p>在常數宣告中使用條件式對於建立像是 <code>NonZero::new</code> 的 <code>const fn</code> 及 直譯判定（interpreting assertions）來說很重要。</p>
+<h1><a class="header" href="#教學式解說" id="教學式解說">教學式解說</a></h1>
+<p>如果你寫</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -188,9 +202,7 @@ if x &gt; y {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>The program will always panic (except if both <code>x</code> and <code>y</code> are <code>0</code>) because
-either <code>x - y</code> will overflow or <code>y - x</code> will. To resolve this one must move the
-<code>let a</code> and <code>let b</code> into the <code>if</code> and <code>else</code> branch respectively.</p>
+<p>這支程式永遠都會 panic（除非 <code>x</code> 和 <code>y</code> 同時是 <code>0</code>）因為不管是 <code>x - y</code> 或是 <code>y - x</code> 都會造成溢位。為了解決此問題，我們必須把 <code>let a</code> 及 <code>let b</code> 個別搬進 <code>if</code> 及 <code>else</code> 中。</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -205,7 +217,7 @@ if x &gt; y {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>When constants are involved, new issues arise:</p>
+<p>當改用常數時，上面的寫法就會出現新問題：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -220,11 +232,8 @@ const FOO: SomeType = if X &gt; Y {
 };
 <span class="boring">}
 </span></code></pre></pre>
-<p><code>A</code> and <code>B</code> are evaluated before <code>FOO</code>, since constants are by definition
-constant, so their order of evaluation should not matter. This assumption breaks
-in the presence of errors, because errors are side effects, and thus not pure.</p>
-<p>To resolve this issue, one needs to eliminate the intermediate constants and
-directly evaluate <code>X - Y</code> and <code>Y - X</code>.</p>
+<p><code>A</code> 和 <code>B</code> 會比 <code>FOO</code> 先被求值，因為常數在定義上就是「常數」，所以不應被求值順序影響。這項假設在有錯誤的情況下並不成立，因為錯誤屬於副作用（side effects），因此不純（pure）。</p>
+<p>為了解決此問題，我們必須把中介常數消掉並改為直接對 <code>X - Y</code> 及 <code>Y - X</code> 求值。</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -239,23 +248,14 @@ const FOO: SomeType = if X &gt; Y {
 };
 <span class="boring">}
 </span></code></pre></pre>
-<h1><a class="header" href="#reference-level-explanation" id="reference-level-explanation">Reference-level explanation</a></h1>
-<p><code>match</code> on enums whose variants have no fields or <code>if</code> is translated during HIR
--&gt; MIR lowering to a <code>switchInt</code> terminator. Mir interpretation will now have to
-evaluate those terminators (which it already can).</p>
-<p><code>match</code> on enums with variants which have fields is translated to <code>switch</code>,
-which will check either the discriminant or compute the discriminant in the case
-of packed enums like <code>Option&lt;&amp;T&gt;</code> (which has no special memory location for the
-discriminant, but encodes <code>None</code> as all zeros and treats everything else as a
-<code>Some</code>). When entering a <code>match</code> arm's branch, the matched on value is
-essentially transmuted to the enum variant's type, allowing further code to
-access its fields.</p>
-<h1><a class="header" href="#drawbacks" id="drawbacks">Drawbacks</a></h1>
-<p>This makes it easier to fail compilation on random &quot;constant&quot; values like
-<code>size_of::&lt;T&gt;()</code> or other platform specific constants.</p>
-<h1><a class="header" href="#rationale-and-alternatives" id="rationale-and-alternatives">Rationale and alternatives</a></h1>
-<h2><a class="header" href="#require-intermediate-const-fns-to-break-the-eager-const-evaluation" id="require-intermediate-const-fns-to-break-the-eager-const-evaluation">Require intermediate const fns to break the eager const evaluation</a></h2>
-<p>Instead of writing</p>
+<h1><a class="header" href="#技術文件式解說" id="技術文件式解說">技術文件式解說</a></h1>
+<p><code>if</code> 或是在 variant 沒有欄位的 enums 上做 <code>match</code> 會在 HIR -&gt; MIR 階段時，被轉譯成 <code>switchInt</code> 終止器（terminator）。Mir 直譯器現在將會針對那些終止器求值（之前就可以了）。</p>
+<p>在 variant 沒有欄位的 enums 上做 <code>match</code> 會被轉譯成 <code>switch</code>，表示他會被檢查 discriminant 或是在 packed enums（例如 <code>Option&lt;&amp;T&gt;</code>）的情況會運算 discriminant（這個情況 discriminant 沒有特別的記憶體位址，但他會把所有的零視為 <code>None</code>，並把其他的值都當作 <code>Some</code>）。當進入 <code>match</code> 的分支時，匹配上的值基本上會被 transmute 成 enum 的 variant 型別，如此一來可以允許其他程式碼來存取該 enum 的欄位。</p>
+<h1><a class="header" href="#缺點" id="缺點">缺點</a></h1>
+<p>這項功能容易造成任意「常數」值（如：<code>size_of::&lt;T&gt;()</code> 或是特定的平台常數）編譯失敗。</p>
+<h1><a class="header" href="#原理及替代方案" id="原理及替代方案">原理及替代方案</a></h1>
+<h2><a class="header" href="#利用中介-const-fns-來破壞立即常數求值eager-const-evaluation" id="利用中介-const-fns-來破壞立即常數求值eager-const-evaluation">利用中介 const fns 來破壞立即常數求值（eager const evaluation）</a></h2>
+<p>如果寫成</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -268,7 +268,7 @@ const AB: u32 = if X &gt; Y {
 };
 <span class="boring">}
 </span></code></pre></pre>
-<p>where either <code>X - Y</code> or <code>Y - X</code> would emit an error, add an intermediate const fn</p>
+<p><code>X - Y</code> 或是 <code>Y - X</code> 其中一方有可能會報錯，這時必須加入中介 const fn</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -284,10 +284,8 @@ const fn foo(x: u32, y: u32) -&gt; u32 {
 const AB: u32 = foo(X, Y);
 <span class="boring">}
 </span></code></pre></pre>
-<p>Since the const fn's <code>x</code> and <code>y</code> arguments are unknown, they cannot be const
-evaluated. When the const fn is evaluated with given arguments, only the taken
-branch is evaluated.</p>
-<h1><a class="header" href="#unresolved-questions" id="unresolved-questions">Unresolved questions</a></h1>
+<p>const fn 的 <code>x</code> 和 <code>y</code> 參數未知，無法做常數求值（const evaluate）。當提供此 const fn 參數並求值時，只會對相應的分支求值。</p>
+<h1><a class="header" href="#未解決問題" id="未解決問題">未解決問題</a></h1>
 
                     </main>
 
