--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -379,6 +379,158 @@ consensus and community norms, not impose more structure than necessary.</p>
 <h3 id="contributions"><a class="header" href="#contributions">Contributions</a></h3>
 <p>Unless you explicitly state otherwise, any contribution intentionally submitted for inclusion in the work by you, as defined in the Apache-2.0 license, shall be dual licensed as above, without any additional terms or conditions.</p>
 <ul>
+<li>Feature Name: <code>const_generics</code></li>
+<li>Start Date: 2017-05-01</li>
+<li>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/2000">rust-lang/rfcs#2000</a></li>
+<li>Rust Issue: <a href="https://github.com/rust-lang/rust/issues/44580">rust-lang/rust#44580</a></li>
+<li>Translators: [<a href="https://github.com/yanganto">@yanganto</a>]</li>
+<li>Commit: <a href="https://github.com/rust-tw/rfcs-tw/blob/725bf172f383a21cf74189feb5073705778d2206/text/2000-const-generics.md">The commit link this page based on</a></li>
+<li>Updated: 2021-03-26</li>
+</ul>
+<h1 id="總結"><a class="header" href="#總結">總結</a></h1>
+<p>允許所有類型（type）以作為常數值（constant values）的形式成為泛型（generic）；由此將允許使用者以撰寫所有陣列類型（array types）之抽象的實作（impls）。</p>
+<h1 id="動機"><a class="header" href="#動機">動機</a></h1>
+<p>現今 Rust 具有一種以常數參數化（parametric）類型︰內建陣列類形<code>[T; LEN]</code>。然而，常數泛型（const generics）並非一級特徵，使用者無法以常數形式定義自己的泛型，且不能對所有的陣列實作特徵（traits）。</p>
+<p>於此限制下，標準庫僅包含了長度為 32 之陣列的實作，而陣列一般作為語言的二級特徵。即使在長度可靜態已知的情形下，也大多調配於堆（heap）上成為向量而非使用陣列類型。（造成了一定程度上的效能取捨）</p>
+<p>常數參數亦可讓使用者更自然的指定一個泛型變數, 且相比於類型更確切的反應其值。例如，如果由於某些因素而用一個值類型的名稱作為參數，其可比以一個單元類型（unit type）的形式來提供名稱更合理的（藉由相關的常數或是函數）以<code>&amp;'static str</code>的形式來提供其名稱。這是更簡易的API。</p>
+<p>總結來說，常數可用作參數使用，讓編譯器可在型別檢查時期將確定了這些值。藉由此限制在編譯時檢查來評估一個特徵是否實作過，孤兒規則可以確保一個箱（crate）僅使用部份安全的值。（例如，有關密碼學之相關函式庫）</p>
+<h1 id="設計細節"><a class="header" href="#設計細節">設計細節</a></h1>
+<p>現今，Rust 中的型別可以兩種形式參數化︰類型與生命周期化。如同在編譯時運算這些值的方式，我們將額外的允許類型以值的形數參數化。一個單一常數參數必為單一、特定類型，且可以有效的置換為編譯時期計算出的任意值且該類型將符合本RFC於後列出的要求。</p>
+<p>（為明確在此RFC闡明哪些表達式可在編譯時評估，在之後的範例中，我們假設整數及其基本算數操作可以在編譯時計算。）</p>
+<h2 id="詞彙表"><a class="header" href="#詞彙表">詞彙表</a></h2>
+<ul>
+<li>
+<p><b>常數（constant, const value）︰</b>一個在編譯時期可以保證完全評估的 Rust 值。不同於靜態值，常數將在其使用的位置內聯而非存在於編譯好的二進制檔案的資料區段。</p>
+</li>
+<li>
+<p><b>常數參數（泛型常數）︰</b>一個由類型或函式抽象而得到的常數。此常數是具體類型的輸入，例如一個靜態陣例的長度。</p>
+</li>
+<li>
+<p><b>關聯常數︰</b>一個由特徵關聯而得到的常數，其相似於關聯的類型。不同於常數參數，關聯常數是由類型所決定的。</p>
+</li>
+<li>
+<p><b>常數變數︰</b>相比於具體常數，常數參數或關聯常數皆為常數變數。在單態化之前，一個常數在上下文中是未確定的。</p>
+</li>
+<li>
+<p><b>具體常數︰</b>相比於常數變數，一個在上下文中已知且單一值的常數。</p>
+</li>
+<li>
+<p><b>常數表達式︰</b>一個用於評估一個常數的表達式。此可為一個身份表達式或一個在 Rust 常數系統中可以評估出的更複雜的表達式。</p>
+</li>
+<li>
+<p><b>抽象常數表達式︰</b>一個包含常數變數的表達式。（因此在單態化結束前其值是無法評估的）</p>
+</li>
+<li>
+<p><b>常數投影︰</b>抽象常數表達式之值（其在泛型上下文中因缺乏所依賴的常數變數而無法被定義）</p>
+</li>
+<li>
+<p><b>身份表達式︰</b>一個在不以其範圍內的名稱進行置換則無法評估的表達式。此包括了所有的文字及身份（ident），例如，<code>3</code>、<code>&quot;Hello, world&quot;</code>、<code>foo_bar</code>。</p>
+</li>
+</ul>
+<h2 id="宣告一個常數參數"><a class="header" href="#宣告一個常數參數">宣告一個常數參數</a></h2>
+<p>可在類型參數宣告之任何序列中宣告常數參數（例如在一個類型的定義中或是在<code>impl</code>的標頭或區塊中）。常數參數可以用<code>const $ident: $ty</code>之形式。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>struct RectangularArray&lt;T, const WIDTH: usize, const HEIGHT: usize&gt; {
+    array: [[T; WIDTH]; HEIGHT],
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>這些常數參數（在本RFC內文中可替稱作「常數變數」）使用名稱進行身份（ident）的進行宣告，且所有值必定可歸因於其類型。於此可歸因於之類型將於本RFC後文說明其限制。</p>
+<p>常數變數可宣告於在此項目（type、impl、function、method、…等）的整體範圍中。</p>
+<h2 id="採用一個常數作為參數"><a class="header" href="#採用一個常數作為參數">採用一個常數作為參數</a></h2>
+<p>任何可歸因於常數參數之常數表達式的類型將可用作參數。除了陣列外，當採用一個表達式作為參數且該表達式非一身份表達式時，該表達式必包含於一區塊中 。此語法上的限制是必要的以避免在類型中解析表達式需要無限的向前展望（lookahead）。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>const X: usize = 7;
+
+let x: RectangularArray&lt;i32, 2, 4&gt;;
+let y: RectangularArray&lt;i32, X, {2 * 2}&gt;;
+<span class="boring">}
+</span></code></pre></pre>
+<h3 id="陣列"><a class="header" href="#陣列">陣列</a></h3>
+<p>陣列語法中有一個特別的構造語法：<code>[T; CONST]</code>。在陣列中大括號是不在需要的存在於任何的常數表達式中，<code>[i32; N * 2]</code>是一個合規的類型。</p>
+<h2 id="何時可使用常數變數"><a class="header" href="#何時可使用常數變數">何時可使用常數變數</a></h2>
+<p>常數變數可使用於下列上下文之任一者中︰</p>
+<ol>
+<li>用於任一型別中的常數，該型別是待定之項目之簽章的一部份：<code>fn foo&lt;const N: usize&gt;(arr: [i32; N])</code></li>
+<li>用於定義相關常數的常數表達式或相關類型之參數的一部份</li>
+<li>在項目中任何函數的內部之任何運行表達式中的一值</li>
+<li>在項目中任何函數內部用於任何類型的參數，例如在<code>let x: [i32; N]</code> or <code>&lt;[i32; N] as Foo&gt;::bar()</code>.</li>
+<li>在項目中任何欄位之類型的一部分（如，<code>struct Foo&lt;const N: usize&gt;([i32; N]);</code>）</li>
+</ol>
+<p>在一般情況下，常數變數可以用做常數。但有一個明顯的例外是，常數變數不可用於常數、靜態類型、函數、或函數內的類型的建構子。意即下面的例子是不合規的。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn foo&lt;const X: usize&gt;() {
+    const Y: usize = X * 2;
+    static Z: (usize, usize)= (X, X);
+
+    struct Foo([i32; X]);
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>這個限制可比擬為使用來自函數中建造之類型的類型變數的限制。所有的宣告雖然專用於該項目，但也必需獨立於它，且不能有其他於其同範圍內的變數。</p>
+<h2 id="兩個變數的類型相等性之相等的原則"><a class="header" href="#兩個變數的類型相等性之相等的原則">兩個變數的類型相等性之相等的原則</a></h2>
+<p>在統一且重疊的檢查期間，何時兩個類型是否相等是關重要的。因為類型現在可依賴於常數了，所以我們必須定義我們如何比較兩個常數表達式的相等性。</p>
+<p>在大多數情況下，兩個常數的相等性會如同你的預期，如果兩個常數彼此相等，則它們相等。 但是容會有一些特別的警告。</p>
+<h3 id="結構相等性"><a class="header" href="#結構相等性">結構相等性</a></h3>
+<p>根據<a href="https://github.com/rust-lang/rfcs/blob/master/text/1445-restrict-constants-in-patterns.md">RFC 1445</a>所說明之結構相等性之定義而定常數相等性。只有在類型是「結構相符」的情形下，該結構可用做結構參數。舉例來說，浮點數將會不相等。</p>
+<p>在最終解決方案出來前，已針對常數進行匹配之結構相符的性質應作為權宜之計。無論變數參數採用什麼解決方案，確保相等是具有反射性（reflexive）對於類型相等之目的都是重要的，其使得類型始終相同。（浮點數相等的標准定義是不具反射性的。）</p>
+<p>進行匹配和常數參數使用相同的相等性定義，可能會在某一天因使用的定義有所不同而發散，但是這是無關緊要的，現今所使用的相等性定義仍足以滿足我們的目的。</p>
+<p>因為常數必須具有結構相符的性質，並且此屬性無法強制轉成一個類型變量，因此無法引入歸因於類型變量的參數於一個常數之中。（意即，<code>Foo &lt;T，const N：T&gt;</code>不是合規的）</p>
+<h3 id="兩個抽像表達式的相等性"><a class="header" href="#兩個抽像表達式的相等性">兩個抽像表達式的相等性</a></h3>
+<p>在比較兩個抽象常數表達式（即，依賴於變數的表達式）的相等性時，我們無法比較其值的相等性，因其值是由常數變數所決定的，而在在單態化之前是未知的。</p>
+<p>基於這個原因，我們將至少會將常數表達式的返回值當作投影（projections）。雖然其值仍保特未知，我們仍藉由輸入值來決定其值，這是作法相同於現在我們處理關聯類型（associated types）的作法。此作法我們將稱為常數投影（const projection），對另一個同類型的常數而言，我們永遠無法確定其相等性。</p>
+<p>每個常數表達式都會生成一個新的投影，該投影本質上是匿名的。不可能使兩個匿名投影一致（想像兩個關聯類型之泛型<code>T :: Assoc</code>和<code>T :: Item</code>：你無法證明或否定它們是否為同一類型）。因此，除非它們從字面上使用完完全全相同的文字，否則常數表達式在AST節點中是彼此不一樣的。這意味著<code>N + 1</code>的一個實例不會與另一個<code>N + 1</code>的實例在類型相同。</p>
+<p>更清楚來說，以下是無法通過類型檢查的，因為<code>N + 1</code>會是兩種不同的類型：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn foo&lt;const N: usize&gt;() -&gt; [i32; N + 1] {
+    let x: [i32; N + 1] = [0; N + 1];
+    x
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>但如果這樣撰寫，它將只有一個類型：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>type Foo&lt;const N: usize&gt; = [i32; N + 1];
+
+fn foo&lt;const N: usize&gt;() -&gt; Foo&lt;N&gt; {
+    let x: Foo&lt;N&gt; = Default::default();
+    x
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h4 id="未來展望與延伸"><a class="header" href="#未來展望與延伸">未來展望與延伸</a></h4>
+<p>未來的某一天我們可以利用一些操作的基本屬性（例如加法和乘法的可交換性），而對常數投影的相等性做出更聰明的判斷。但是，本RFC並不打算在此提案中建造這些已知可能，而打算留給未來的 RFC。</p>
+<h2 id="常數變數的特異化"><a class="header" href="#常數變數的特異化">常數變數的特異化</a></h2>
+<p>定義將常數參數特異化的順序也是很重要的。為此，將字面上的定義必需比其他表達式更具體，否則會表達式的定義的順序上產生不確定性。</p>
+<p>正如我們有朝一日可以在常數投影上支持更進階的平等性一樣，我們可以支持更進階的定義特異性。例如，給定類型為<code>(i32, i32)</code>，我們可以確定<code>(0, PARAM2)</code>比<code>(PARAM1, PARAM2)</code>更為具體；<code>(i32, U)</code>比<code>(T, U)</code>更為具體。在未來的某天我們將來也有可能在常數特異化上支持多元交互（intersectional）和其他更進階的定義。</p>
+<h1 id="我們如何教導這個"><a class="header" href="#我們如何教導這個">我們如何教導這個</a></h1>
+<p>常數泛型是一個很大的功能，將需要大量的教育資料，這將會需要在書本跟參考文件，且可能會在書中有獨立的章節。常數泛型的文件化過程本質上將會是一個大工程。</p>
+<p>然而，常數泛型應該被視為進階功能，並且應該在使用 Rust 的初期，我們可能不會向新用戶介紹這些內容。</p>
+<h1 id="缺點"><a class="header" href="#缺點">缺點</a></h1>
+<p>此功能由於允許類型由常數確定，將為類型系統增加了大量的複雜性。它需要抽象變數相等性的確定規則，這出現了很多令人意外的的特殊情況。它增加了 Rust 的很多語法。如果我們不要採用此功能，Rust 肯定會更簡單。</p>
+<p>然而，我們已經引入了一種由常數確定的類型（數組類型）。泛型化之功能似乎是必然的，甚至是不可避免的，鑑於此，我們應該盡早決定。</p>
+<h1 id="替代方案"><a class="header" href="#替代方案">替代方案</a></h1>
+<p>除了暫緩執行或不執行外，並沒有真的替代方案。</p>
+<p>我們將限制常數泛型為<code>usize</code>類型，但這不會讓實作更為簡單。</p>
+<p>我們可以更快地往常數間更複雜的平等性概念之方向去，但這會使實作比上述說明的更加複雜。</p>
+<p>我們可以選擇稍微不同的語法，例如將在常數跟類型間加上分號。</p>
+<h1 id="未解決問題"><a class="header" href="#未解決問題">未解決問題</a></h1>
+<ul>
+<li><b>一致的抽象常數表達式︰</b>本RFC盡可能最大限度地減少抽象常數表達式的統合性上的處理，從本質上來說，並沒有使其一致。這可能造成無法接受的使用者體驗的不穩定，而我們想要實作一些更進些的統合性之前穩定此功能。</li>
+<li><b>常數表達式之正確格式︰</b>在單態化過程中，程式將不會採用應急措施（panic），此類型都被識為正確格式。這對於溢出和超出範圍的陣列存取來說很棘手。然而，我們實際上只能確保在函數的簽章中表達式常數的格式進行正確性約束。目前尚不清楚有關在函數中抽象常數表達式之格式正確性的處理方式，也因此使實作推遲。</li>
+<li><b>排序與默認參數︰</b>所有常數參數是否將排在最後，或者將它們與類型混合嗎？具有默認值的參數是否須在沒有默認值之後？這些決定推遲到實作語法的討論中。</li>
+</ul>
+<ul>
 <li>Feature Name: <code>const-control-flow</code></li>
 <li>Start Date: 2018-01-11</li>
 <li>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/2342">rust-lang/rfcs#2342</a></li>
@@ -387,9 +539,9 @@ consensus and community norms, not impose more structure than necessary.</p>
 <li>Commit: <a href="https://github.com/rust-lang/rfcs/blob/dfe697106478a52bddc000477e8cd0621bcc1a20/text/2342-const-control-flow.md">The commit link this page based on</a></li>
 <li>Updated: 2020-09-05</li>
 </ul>
-<h1 id="總結"><a class="header" href="#總結">總結</a></h1>
+<h1 id="總結-1"><a class="header" href="#總結-1">總結</a></h1>
 <p>透過此功能，可以在常數求值（const evaluation）中使用 <code>if</code> 及 <code>match</code> 並使他們被延遲求值。簡單來說，這項功能允許我們寫 <code>if x &lt; y { y - x } else { x - y }</code>；即使當使用非負型別時在 <code>x &lt; y</code> 的 <code>else</code> 分支會報溢位錯誤 (overflow error)。</p>
-<h1 id="動機"><a class="header" href="#動機">動機</a></h1>
+<h1 id="動機-1"><a class="header" href="#動機-1">動機</a></h1>
 <p>在常數宣告中使用條件式對於建立像是 <code>NonZero::new</code> 的 <code>const fn</code> 及 直譯判定（interpreting assertions）來說很重要。</p>
 <h1 id="教學式解說"><a class="header" href="#教學式解說">教學式解說</a></h1>
 <p>如果你寫</p>
@@ -456,7 +608,7 @@ const FOO: SomeType = if X &gt; Y {
 <h1 id="技術文件式解說"><a class="header" href="#技術文件式解說">技術文件式解說</a></h1>
 <p><code>if</code> 或是在 variant 沒有欄位的 enums 上做 <code>match</code> 會在 HIR -&gt; MIR 階段時，被轉譯成 <code>switchInt</code> 終止器（terminator）。Mir 直譯器現在將會針對那些終止器求值（之前就可以了）。</p>
 <p>在 variant 沒有欄位的 enums 上做 <code>match</code> 會被轉譯成 <code>switch</code>，表示他會被檢查 discriminant 或是在 packed enums（例如 <code>Option&lt;&amp;T&gt;</code>）的情況會運算 discriminant（這個情況 discriminant 沒有特別的記憶體位址，但他會把所有的零視為 <code>None</code>，並把其他的值都當作 <code>Some</code>）。當進入 <code>match</code> 的分支時，匹配上的值基本上會被 transmute 成 enum 的 variant 型別，如此一來可以允許其他程式碼來存取該 enum 的欄位。</p>
-<h1 id="缺點"><a class="header" href="#缺點">缺點</a></h1>
+<h1 id="缺點-1"><a class="header" href="#缺點-1">缺點</a></h1>
 <p>這項功能容易造成任意「常數」值（如：<code>size_of::&lt;T&gt;()</code> 或是特定的平台常數）編譯失敗。</p>
 <h1 id="原理及替代方案"><a class="header" href="#原理及替代方案">原理及替代方案</a></h1>
 <h2 id="利用中介-const-fns-來破壞立即常數求值eager-const-evaluation"><a class="header" href="#利用中介-const-fns-來破壞立即常數求值eager-const-evaluation">利用中介 const fns 來破壞立即常數求值（eager const evaluation）</a></h2>
@@ -490,7 +642,7 @@ const AB: u32 = foo(X, Y);
 <span class="boring">}
 </span></code></pre></pre>
 <p>const fn 的 <code>x</code> 和 <code>y</code> 參數未知，無法做常數求值（const evaluate）。當提供此 const fn 參數並求值時，只會對相應的分支求值。</p>
-<h1 id="未解決問題"><a class="header" href="#未解決問題">未解決問題</a></h1>
+<h1 id="未解決問題-1"><a class="header" href="#未解決問題-1">未解決問題</a></h1>
 <ul>
 <li>Feature Name: <code>min_rust_version</code></li>
 <li>Start Date: 2018-06-28</li>
@@ -500,14 +652,14 @@ const AB: u32 = foo(X, Y);
 <li>Commit: <a href="https://github.com/rust-lang/rfcs/blob/3071138d4ed510d6dfc1f8e1d7e9d4b099ea12e8/text/2495-min-rust-version.md">The commit link this page based on</a></li>
 <li>Updated: 2020-09-07</li>
 </ul>
-<h1 id="總結-1"><a class="header" href="#總結-1">總結</a></h1>
+<h1 id="總結-2"><a class="header" href="#總結-2">總結</a></h1>
 <p>在 <code>Cargo.toml</code> 的 package 區塊加入 <code>rust</code> 欄位，用於指定 crate 的最低支援 Rust 版本（Minimum Supported Rust Version，MSRV）。</p>
 <pre><code class="language-toml">[package]
 name = &quot;foo&quot;
 version = &quot;0.1.0&quot;
 rust = &quot;1.30&quot;
 </code></pre>
-<h1 id="動機-1"><a class="header" href="#動機-1">動機</a></h1>
+<h1 id="動機-2"><a class="header" href="#動機-2">動機</a></h1>
 <p>當前 crate 無任何正式方法指定 MSRV，導致使用者無法在不建構該 crate 的情況下得知 crate 是否可透過他們的工具鏈（toolchain）建構。這也帶來有關如何在提升 MSRV 時管理 crate 版本的爭論，保守的作法是將之視為破壞性改動，這種作法會阻礙整個生態採納新功能，或使得版本號通膨式提升，進而讓下游的 crate 很難跟上。另一方面，若作法稍微寬鬆些，則導致採用較舊編譯器版本的使用者無法成功編譯它們的 crate。</p>
 <h1 id="教學式解說-1"><a class="header" href="#教學式解說-1">教學式解說</a></h1>
 <p>若你想指定一個特定 MSRV 版本，請在 <code>Cargo.toml</code> 的 <code>[package]</code> 區塊中的 <code>rust</code> 欄位設定指定的 Rust 版本。如果你建構一個 crate 時有任一依賴要求的 MSRV 比你當前工具鏈更高，會導致編譯錯誤，指明該依賴與它的 MSRV。這個行為可以透過 <code>--no-msrv-check</code> 選項來停用。</p>
@@ -520,7 +672,7 @@ rust = &quot;1.30&quot;
 <li>版本不能低於 1.27（此版本將 <code>package.rust</code> 欄位從錯誤改為警告）。</li>
 <li>版本不能比選用的 edition 釋出的版本低，舉例來說，同時出現 <code>rust = &quot;1.27&quot;</code> 與 <code>edition = 2018</code> 是非法的。</li>
 </ul>
-<h1 id="未來展望與延伸"><a class="header" href="#未來展望與延伸">未來展望與延伸</a></h1>
+<h1 id="未來展望與延伸-1"><a class="header" href="#未來展望與延伸-1">未來展望與延伸</a></h1>
 <h2 id="對版本解析之影響"><a class="header" href="#對版本解析之影響">對版本解析之影響</a></h2>
 <p><code>rust</code> 欄位之值（手動設定或 <code>cargo</code> 自動選擇）會用於選擇合適的依賴版本。</p>
 <p>舉例來說，想像你的 crate 相依 crate <code>foo</code>，一個發佈了從 <code>0.1.0</code> 到 <code>0.1.9</code> 十個版本的 crate，其中 <code>0.1.0</code> 到 <code>0.1.5</code> 版在 crates.io 上 <code>Cargo.toml</code> 的 <code>rust</code> 欄位為「1.30」，其他版本則為「1.40」。現在，你建構一個專案用了例如 Rust 1.33 版，<code>cargo</code> 會選用 <code>foo v0.1.5</code>。<code>foo v0.1.9</code> 只會在你用 Rust 1.40 或更高版本建構專案時選用。倘若你嘗試使用 Rust 1.29 建構專案，cargo 會回報錯誤。</p>
@@ -555,13 +707,13 @@ rust = &quot;1.33&quot;
 <li>類語意化版本條件：<code>nightly: &gt;=2018-01-01</code>、<code>nightly: &gt;=2018-01-01, &lt;=2018-01-15</code>、<code>nightly: &gt;=2018-01-01, &lt;=2018-01-15, 2018-01-20</code>。（後者會解讀為 「(version &gt;= 2018-01-01 &amp;&amp; version &lt;= 2018-01-20) || version == 2018-01-20」）</li>
 </ul>
 <p>這些條件或許很嚴苛，盼使用這功能的 crate 一隻手數得出來。</p>
-<h1 id="缺點-1"><a class="header" href="#缺點-1">缺點</a></h1>
+<h1 id="缺點-2"><a class="header" href="#缺點-2">缺點</a></h1>
 <ul>
 <li>即使宣告了 MSRV 且檢查過，並無法保持 crate 能夠正確在指定 MSRV 下正確執行，只有合理配置的 CI 能做到此事。</li>
 <li>更複雜的依賴版本解析演算法。</li>
 <li>使用 <code>cargo publish</code> 配合 MSRV <code>rust = &quot;stable&quot;</code> 恐過於保守。</li>
 </ul>
-<h1 id="替代方案"><a class="header" href="#替代方案">替代方案</a></h1>
+<h1 id="替代方案-1"><a class="header" href="#替代方案-1">替代方案</a></h1>
 <ul>
 <li>自動計算 MSRV。</li>
 <li>不做任何事，依靠 <a href="https://github.com/rust-lang/rfcs/pull/2483">LTS 發行</a> 的 crate MSRV 提升。</li>
@@ -575,7 +727,7 @@ rust = &quot;1.33&quot;
 <li><a href="https://github.com/rust-lang/rfcs/pull/1953">RFC 1953</a></li>
 <li><a href="https://github.com/rust-lang/rfcs/pull/2182">RFC 2182</a>（這個非常有爭議的離題了）</li>
 </ul>
-<h1 id="未解決問題-1"><a class="header" href="#未解決問題-1">未解決問題</a></h1>
+<h1 id="未解決問題-2"><a class="header" href="#未解決問題-2">未解決問題</a></h1>
 <ul>
 <li>瑣碎的命名問題：<code>rust</code> 或 <code>rustc</code> 還是 <code>min-rust-version</code></li>
 <li>額外的檢查？</li>
