deploy: 552b74605707b214f81359ded70cd448534d3f7d

--- a/print.html
+++ b/print.html
@@ -167,7 +167,7 @@
                     <main>
                         <h1 id="rust-rfcs---a-hrefhttpsrfcbotrsactive-rfc-lista"><a class="header" href="#rust-rfcs---a-hrefhttpsrfcbotrsactive-rfc-lista">Rust RFCs - <a href="https://rfcbot.rs/">Active RFC List</a></a></h1>
 <p><strong>注意</strong>：這是官方 rust rfcs 的 fork。如果你有興趣協助翻譯的話，歡迎前往 <a href="CONTRIBUTING.html">CONTRIBUTING.md</a> 瞭解更多細節。</p>
-<p><strong>Note</strong>: This is a for of official rust rfcs. If you are interested in help translating, please have a look at <a href="CONTRIBUTING.html">CONTRIBUTING.md</a>.</p>
+<p><strong>Note</strong>: This is a fork of official rust rfcs. If you are interested in help translating, please have a look at <a href="CONTRIBUTING.html">CONTRIBUTING.md</a>.</p>
 <p>Many changes, including bug fixes and documentation improvements can be
 implemented and reviewed via the normal GitHub pull request workflow.</p>
 <p>Some changes though are &quot;substantial&quot;, and we ask that these be put through a
